--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "mongoose": "^5.3.4",
     "morgan": "^1.9.1",
     "node-gyp": "^3.8.0",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "start dev": "nodemon"
   },
   "author": "",
   "license": "ISC"
