Start server called

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABSE_URL=mongodb://dev:asdf1234@ds037468.mlab.com:37468/poker-game
+DATABASE_URL=mongodb://dev:asdf1234@ds037468.mlab.com:37468/poker-game
